--- a/infrastructure/backend_app.yaml
+++ b/infrastructure/backend_app.yaml
@@ -2,6 +2,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: backend
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: backend=192.168.44.44:8082/docker-registry/backend
+    argocd-image-updater.argoproj.io/backend.update-strategy: latest
+    argocd-image-updater.argoproj.io/write-back-method: argocd
 spec:
   destination:
     name: ''
