--- a/infrastructure/backend_app.yaml
+++ b/infrastructure/backend_app.yaml
@@ -1,6 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  namespace: argocd
   name: backend
   annotations:
     argocd-image-updater.argoproj.io/image-list: backend=192.168.44.44:8082/docker-registry/backend
