--- a/infrastructure/frontend_app.yaml
+++ b/infrastructure/frontend_app.yaml
@@ -1,6 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  namespace: argocd
   name: frontend
   annotations:
     argocd-image-updater.argoproj.io/image-list: fronted=192.168.44.44:8082/docker-registry/frontend
