--- a/fronted/deploy_frontend.yaml
+++ b/fronted/deploy_frontend.yaml
@@ -3,19 +3,19 @@ kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    app: backend
-  name: backend
+    app: frontend
+  name: frontend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: backend
+      app: frontend
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app: backend
+        app: frontend
     spec:
       containers:
       - image: 192.168.44.44:8082/docker_registry/frontend:latest
@@ -25,7 +25,7 @@ spec:
         resources: {}
         env:
         - name: BACKEND_URL
-          value: backend
+          value: http://backend-service:5001
       imagePullSecrets:
         - name: regcred
 status: {}
